Whitelisting logic should not check non-ws non-http urls

Safebrowsing only works on certain schemes. Further the whitelisting
logic has certain assumptions about the URLs that are checked for
whitelisting. Early out if the url does not have the right scheme.

BUG=750280

Change-Id: I44d0e1ee005df43070402ee02617cdc8f35c9014